testsuite/tests/checks/specific_pre_post/test.out
test_specific_pre_post.ads:9:14: error: Specific_Pre_Post - rule violation
9 |    procedure Proc1 (X : in out T)           --  FLAG
  |              ^^^^^ 

test_specific_pre_post.ads:12:14: error: Specific_Pre_Post - rule violation
12 |    procedure Proc2 (X : in out T)           --  FLAG
   |              ^^^^^ 

test_specific_pre_post.ads:15:13: error: Specific_Pre_Post - rule violation
15 |    function Fun1 (X : T) return Integer     --  FLAG
   |             ^^^^ 

test_specific_pre_post.ads:23:13: error: Specific_Pre_Post - rule violation
23 |    function Fun3 (X : T) return Integer     --  FLAG
   |             ^^^^ 

